--- a/Pages/CriarLeilao.razor
+++ b/Pages/CriarLeilao.razor
@@ -18,9 +18,13 @@
 <PageTitle>Detalhes do Veículo</PageTitle>
 
 <div class="text-white">
-    <div class="font-bold dark:bg-gray-800 p-4 px-16 mb-8">
-        <div class="text-4xl gap-4">New Auction</div>
-    </div>
+    <div class="text-white">
+
+        <div class="font-bold p-4 px-16 mb-8">
+            <div class="text-3xl gap-4">New Auction</div>
+        </div>
+
+    </div>+
 
     <EditForm Model="@leilao" OnValidSubmit="Criar">
 
@@ -76,7 +80,6 @@
 
                     <div class="text-xl underline mb-4">Other Details</div>
 
-                    <!--Combustivel-->
                     <div class="form-group mb-4">
                         <label for="modelo" class="block text-sm font-semibold text-gray-600">Fuel</label>
                         <InputNumber class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
@@ -84,21 +87,18 @@
                         <ValidationMessage For="@(()=>veiculo.TipoMotor)" />
                     </div>
 
-                    <!--Cor-->
                     <div class="form-group mb-4">
                         <label for="modelo" class="block text-sm font-semibold text-gray-600">Color</label>
                         <InputText class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
                         focus:border-blue-500 form-box" @bind-Value="veiculo.CorExterior" />
                         <ValidationMessage For="@(()=>veiculo.CorExterior)" />
                     </div>
-                    <!--Portas-->
                     <div class="form-group mb-4">
                         <label for="modelo" class="block text-sm font-semibold text-gray-600">Doors</label>
                         <InputNumber class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
                         focus:border-blue-500 form-box" @bind-Value="veiculo.NumPortas" />
                         <ValidationMessage For="@(()=>veiculo.NumPortas)" />
                     </div>
-                    <!--Lugares-->
                     <div class="form-group mb-4">
                         <label for="modelo" class="block text-sm font-semibold text-gray-600">Seats</label>
                         <InputNumber class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
@@ -106,7 +106,6 @@
                         <ValidationMessage For="@(()=>veiculo.Lugares)" />
                     </div>
 
-                    <!--Cilindrada-->
                     <div class="form-group mb-4">
                         <label for="modelo" class="block text-sm font-semibold text-gray-600">Engine Capacity</label>
                         <InputNumber class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
@@ -114,7 +113,6 @@
                         <ValidationMessage For="@(()=>veiculo.Cilindrada)" />
                     </div>
 
-                    <!--Potencia-->
                     <div class="form-group mb-4">
                         <label for="modelo" class="block text-sm font-semibold text-gray-600">Power</label>
                         <InputNumber class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
@@ -122,7 +120,6 @@
                         <ValidationMessage For="@(()=>veiculo.Potencia)" />
                     </div>
 
-                    <!--Mileage-->
                     <div class="form-group mb-4">
                         <label for="modelo" class="block text-sm font-semibold text-gray-600">Mileage</label>
                         <InputNumber class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
@@ -135,7 +132,6 @@
 
                     <div class="text-xl underline mb-4">Auction Details</div>
 
-                    <!--Start Price-->
                     <div class="form-group mb-4">
                         <label for="modelo" class="block text-sm font-semibold text-gray-600">Start Price</label>
                         <InputNumber class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
@@ -143,14 +139,12 @@
                         <ValidationMessage For="@(()=>leilao.ValorInicial)" />
                     </div>
 
-                    <!--Minimum Bid-->
                     <div class="form-group mb-4">
                         <label for="modelo" class="block text-sm font-semibold text-gray-600">Minimum Bid</label>
                         <InputNumber class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
                         focus:border-blue-500 form-box" @bind-Value="leilao.AumentoMinimo" />
                         <ValidationMessage For="@(()=>leilao.AumentoMinimo)" />
                     </div>
-                    <!--End Date-->
                     <div class="form-group mb-4">
                         <label for="endDate" class="block text-sm font-medium text-gray-600">End Date</label>
                         <InputDate Type="InputDateType.DateTimeLocal" id="endDate" class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
@@ -243,7 +237,7 @@
 
             foreach (var file in files)
             {
-                string directoryPath = $"Images/{leilao.Id}";
+                string directoryPath = $"wwwroot/Images/{leilao.Id}";
                 if (!Directory.Exists(directoryPath))
                 {
                     Directory.CreateDirectory(directoryPath);
