--- a/Pages/Perfil.razor
+++ b/Pages/Perfil.razor
@@ -14,14 +14,13 @@
 
 <div class="text-white">
 
-    <div class="font-bold dark:bg-gray-800 p-4 px-16 mb-8">
-        <div class="text-3xl gap-4">Profile</div>
+    <div class="text-3xl font-bold dark:bg-gray-800 p-4 px-16">
+        Profile
         <div class="text-2xl">Hello, @username!</div>
     </div>
 
     <div class=" items-center justify-center min-h-screen">
         <div class="grid  min-h-screen gap-4 p-20">
-            <!--Multibanco-->
             <div class="dark:bg-gray-800 mb-8 p-4 px-4">
 
                 <div class="text-2xl underline mb-8">Payment Method:</div>
@@ -52,7 +51,6 @@
                 </div>
             </div>
 
-            <!--Entrega-->
             <div class="dark:bg-gray-800 mb-8 p-4 px-4">
                 <div class="text-2xl underline mb-8">Delivery Details:</div>
 
@@ -69,7 +67,6 @@
                 </div>
             </div>
 
-            <!--Mudar PW/Email-->
             <div class="dark:bg-gray-800 mb-8 p-4 px-4">
                 <div class="text-2xl underline mb-8">Change Profile Details:</div>
 
