--- a/Pages/Register.razor
+++ b/Pages/Register.razor
@@ -32,17 +32,17 @@
 
         <div class="mb-5">
             <label for="nif" class="block text-sm font-semibold text-gray-600"></label>
-            <input id="nif" @bind="model.Nif" type="nif" class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 username-input" placeholder="NIF">
+            <input id="nif" @bind="model.Nif" class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 username-input" placeholder="NIF">
         </div>
 
         <div class="mb-5">
             <label for="name" class="block text-sm font-semibold text-gray-600"></label>
-            <input id="name" @bind="model.Name" type="name" class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 username-input" placeholder="Name">
+            <input id="name" @bind="model.Name" class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 username-input" placeholder="Name">
         </div>
 
         <div class="mb-5">
             <label for="dateofbirth" class="block text-sm font-semibold text-gray-600"></label>
-            <input id="dn" @bind="model.Dn" type="dn" class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 username-input" placeholder="Date of Birth">
+            <input type="date" id="dn" @bind="model.Dn"  class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 username-input" placeholder="Date of Birth">
         </div>
 
         <button @onclick="RegisterAndLogin" class="mb-5 w-full bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 focus:outline-none focus:border-blue-700 focus:ring focus:ring-blue-200">
@@ -73,6 +73,9 @@
         public string UserName { get; set; }
         public string Password { get; set; }
         public string Email { get; set; }
+        public string Nif { get; set; }
+        public string Name { get; set; }
+        public DateOnly Dn { get; set; }
     }
 
     private Model model = new Model();
